Fixing z-indexes of flyouts compared to header
Basically always wrap in a port (or mask) unless pushed. Then shift the mask below header with `top` instead of z-index.

--- a/src/components/collapsible_nav/_collapsible_nav.scss
+++ b/src/components/collapsible_nav/_collapsible_nav.scss
@@ -1,1 +1,5 @@
 // Extends <EuiFlyout>
+
+.euiCollapsibleNav:not([class*='push']) {
+  z-index: $euiZNavigation !important; // sass-lint:disable-line no-important
+}
