--- a/src/components/flyout/_flyout.scss
+++ b/src/components/flyout/_flyout.scss
@@ -16,6 +16,8 @@
   z-index: 3;
 
   &--outside {
+    // match dropshadow
+    @include euiBottomShadowLarge;
     right: auto;
     left: 0;
     // Override the hover and focus transitions of buttons
@@ -178,8 +180,14 @@ $flyoutSizes: (
  * Pushed style (inside body)
  */
 .euiFlyout.euiFlyout--push {
-  @include euiBottomShadowMedium;
-  z-index: $euiZHeader; // When docked, make it the same level as the header
+  box-shadow: none;
   clip-path: none;
   animation-duration: 0s; // Don't animate on loading a docked nav
+  border-left: $euiBorderThin;
+  z-index: $euiZHeader - 1;
+
+  &.euiFlyout--left {
+    border-left: none;
+    border-right: $euiBorderThin;
+  }
 }
