--- a/src/components/overlay_mask/_overlay_mask.scss
+++ b/src/components/overlay_mask/_overlay_mask.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   padding-bottom: 10vh;
   animation: euiAnimFadeIn $euiAnimSpeedFast ease-in;
+  z-index: $euiZMask;
 
   $backgroundColor: $euiColorEmptyShade;
 
@@ -21,13 +22,4 @@
 
 .euiBody-hasOverlayMask {
   overflow: hidden;
-}
-
-// Handling the z-index based on whether it should be displayed above or below the header
-.euiOverlayMask--aboveHeader {
-  z-index: $euiZMask;
-}
-
-.euiOverlayMask--belowHeader {
-  z-index: $euiZHeader - 1;
 }
